--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,18 +1,18 @@
 #app {
   display: grid;
-  grid-template-columns: 38.79% 61.21%;
+  grid-template-columns: 1fr 2fr;
 
   height: 100vh;
   overflow: hidden;
 }
 
 aside {
+  margin: 1.25rem 0.625rem 1.25rem 1.25rem ;
   background-image: url(/assets/Background.png);
-  border-radius: 0.75rem;
+  border-radius: 12px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  margin: 1.25rem;
 
   & .aside-container {
     max-width: 25rem;
@@ -20,27 +20,22 @@ aside {
   }
 
   & h1 {
-    margin-top: 1rem;
-    margin-bottom: 0.25rem;
+    font-size: 2.5rem;
+    padding-top: 1rem;
+    padding-bottom: 0.25rem;
   }
 }
 
-main {
+main {    
   overflow: auto;
-  padding: 1.25rem;  
+  margin: 1.25rem 1.25rem 1.25rem 0.625rem; 
   background-color: var(--shape-body);
-  border-radius: 0.75rem;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  margin: 1.25rem;
 
+  border-radius: 12px;
 
   & .main-container {
     max-width: 35rem;
-  }
-
-  & .title {
-    padding: 5rem 8.125rem 2.5rem 8.125rem;
+    align-items: center;
+    padding: 5rem 8.125rem 5rem 8.125rem;
   }
 }
