--- a/styles/fields/radio.css
+++ b/styles/fields/radio.css
@@ -1,17 +1,13 @@
-label + .radio-wrapper {
-  margin-top: 0.75rem;
-}
-
 .radio-wrapper {
+  margin-top: 12px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(2.5rem, 1fr));
-  align-items: center;
   gap: .25rem;
   padding: .25rem;
   background-color: var(--input-base);
   border-radius: .5rem;
   border: 1px solid var(--input-stroke);
-
+  
   & input {
     opacity: 0;
     position: absolute;
@@ -20,14 +16,17 @@ label + .radio-wrapper {
   }
 }
 
-.radio-inner {
-  display: flex;  
-  height: 2.5rem;
-  border-radius: .25rem;
-  align-items: center;
-  
+.radio-inner {  
+  border-radius: .25rem;  
 
-  position: relative;  
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  
+  height: 2.5rem;
+  padding: 0.25rem;
+
+  position: relative;    
   & input,
   & input:focus,
   & input:hover {
