--- a/styles/fields/radio.css
+++ b/styles/fields/radio.css
@@ -20,6 +20,7 @@
   border-radius: .25rem;  
 
   display: flex;
+  justify-content: center;
   align-items: center;
   gap: 0.5rem;
   
@@ -45,5 +46,79 @@
     svg path {
       fill: var(--brand-light);
       }
+}
+
+fieldset.custom {
+  & .radio-color {
+    font: var(--body-sm);
+    color: var(--text-body);
+  }
+
+  & .color-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(2.5rem, 1fr));
+    margin-top: 1rem;
+  }
+
+  & .color-inner input[type="radio"] {
+    appearance: none;
+
+    width: 2.5rem;
+    height:2.5rem;
+    border-radius: 50%;
+    border: .375rem solid var(--shape-button);
+  }
+  
+  & .color-inner input[id="color1"] {
+  background-color: var(--brand-light);
+  }
+
+  & .color-inner input[id="color2"] {
+    background-color: var(--navy);
+    }
+
+  & .color-inner input[id="color3"] {
+    background-color: var(--purple);
+    }
+
+  & .color-inner input[id="color4"] {
+    background-color: var(--fuschia);
+    }
+
+  & .color-inner input[id="color5"] {
+    background-color: var(--pink);
+    }
+
+  & .color-inner input[id="color6"] {
+    background-color: var(--danger);
+    }
+
+  & .color-inner input[id="color7"] {
+    background-color: var(--orange);
+    }
+
+  & .color-inner input[id="color8"] {
+    background-color: var(--yellow);
+    }
+
+  & .color-inner input[id="color9"] {
+    background-color: var(--lime);
+    }
+
+  & .color-inner input[id="color10"] {
+    background-color: var(--green);
+    }
+
+  & .color-inner input[id="color11"] {
+    background-color: var(--cyan);
+    }
+
+  & .color-inner input[type="radio"]:hover {
+    border-color: var(--shape-hover);
+  }
+
+  & .color-inner input[type="radio"]:checked {
+    outline: 2px solid var(--brand-light);
+  }
 }
 
