ajustando image do aside

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -8,7 +8,7 @@
 
 aside {
   margin: 1.25rem 0.625rem 1.25rem 1.25rem ;
-  background-image: url(/assets/Background.png);
+  background-image: url(/assets/background.svg);
   border-radius: 12px;
   background-repeat: no-repeat;
   background-size: cover;
